# quaternion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_script.sh
src/algorithms/: CMakeLists.txt  main.cpp
src/base/: CMakeLists.txt  Quaternion.cpp  Quaternion.h
src/testing/: CMakeLists.txt  QuaternionOperatorUT.cpp  QuaternionOperatorUT.h  unitTester.cpp
